--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"main": "index.js",
 	"license": "MIT",
 	"scripts": {
-		"dev": "next dev",
+		"dev": "node server.js",
 		"build": "next build",
 		"start": "next start"
 	},
@@ -16,5 +16,9 @@
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.2.0",
 		"react-spacer": "^1.3.0"
+	},
+	"devDependencies": {
+		"express": "^4.17.1",
+		"http-proxy-middleware": "^2.0.0"
 	}
 }
