--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"react-bootstrap": "^1.6.1",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.2.0",
+		"react-image-file-resizer": "^0.4.6",
 		"react-spacer": "^1.3.0"
 	},
 	"devDependencies": {
