--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.2.0",
 		"react-image-file-resizer": "^0.4.6",
+		"react-markdown": "^6.0.2",
 		"react-spacer": "^1.3.0"
 	},
 	"devDependencies": {
