--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
 		"react-icons": "^4.2.0",
 		"react-image-file-resizer": "^0.4.6",
 		"react-markdown": "^6.0.2",
-		"react-spacer": "^1.3.0"
+		"react-player": "^2.9.0",
+		"react-spacer": "^1.3.0",
+		"video-react": "^0.14.1"
 	},
 	"devDependencies": {
 		"express": "^4.17.1",
